--- a/Palindrome Server Side/index.html
+++ b/Palindrome Server Side/index.html
@@ -13,7 +13,7 @@
         <input class="palCheck" type="text" name="" value="">
         <input class="btn" type="button" name="" value="Submit">
       </form>
-      <p id="answer"></p>
+      <p id="answer" class="hidden"></p>
     </section>
     <script src="js/app.js"></script>
   </body>
